package inf101.v19.sem2.ui;

public class UIOptions {
	// Label/grid options
	public static String[] ROW_LABELS = { "A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R",
			"S", "T", "U", "V", "W", "X", "Y", "Z" };
//	public static String[] ROW_LABELS = { "C", "X", "XI", "IX", "V", "W", "Z", "DF", "asd", "J", "K", "L", "M", "N", "O", "P", "Q", "R",
//			"S", "T", "U", "V", "W", "X", "Y", "Z" };
	
	public static double LABEL_FONT_SIZE = 36;
	
	// Peg options ...
	public static double PEG_SCALE = 0.8;
	public static double PEG_SCALE_HOVER = 1.04;
	
	// Ship options ...
	public static double SHIP_ROUNDING = 140;
	public static double SHIP_INSET = 10;
	public static String SHIP_FILL = "darkgray";
	public static String SHIP_STROKE = "black";
}
