@startuml

title __INF101.V19.SEM2's Class Diagram__\n

  package inf101.v19.sem2 {
    class AppInfo {
    }
  }
  

  package inf101.v19.sem2 {
    package inf101.v19.sem2.ship {
      class Battleship {
      }
    }
  }
  

  package inf101.v19.sem2 {
    package inf101.v19.sem2.ship {
      class Carrier {
      }
    }
  }
  

  package inf101.v19.sem2 {
    package inf101.v19.sem2.actors {
      class Computer {
      }
    }
  }
  

  package inf101.v19.sem2 {
    package inf101.v19.sem2.ship {
      class Cruiser {
      }
    }
  }
  

  package inf101.v19.sem2 {
    package inf101.v19.sem2.ship {
      class Destroyer {
      }
    }
  }
  

  package inf101.v19.sem2 {
    package inf101.v19.sem2.examplegame {
      class Game {
      }
    }
  }
  

  package inf101.v19.sem2 {
    package inf101.v19.sem2.ui {
      class GridCellController {
      }
    }
  }
  

  package inf101.v19.sem2 {
    package inf101.v19.sem2.ui {
      enum GridCellStates {
      }
    }
  }
  

  package inf101.v19.sem2 {
    package inf101.v19.sem2.interfaces {
      interface IActor {
      }
    }
  }
  

  package inf101.v19.sem2 {
    package inf101.v19.sem2.interfaces {
      interface IPc {
      }
    }
  }
  

  package inf101.v19.sem2 {
    package inf101.v19.sem2.interfaces {
      interface IPlayer {
      }
    }
  }
  

  package inf101.v19.sem2 {
    package inf101.v19.sem2.interfaces {
      interface IShip {
      }
    }
  }
  

  package inf101.v19.sem2 {
    package inf101.v19.sem2.interfaces {
      interface IUIGame {
      }
    }
  }
  

  package inf101.v19.sem2 {
    package inf101.v19.sem2.interfaces {
      interface IUserInterface {
      }
    }
  }
  

  package inf101.v19.sem2 {
    package inf101.v19.sem2.ui {
      class Main {
      }
    }
  }
  

  package inf101.v19.sem2 {
    package inf101.v19.sem2.actors {
      class Player {
      }
    }
  }
  

  package inf101.v19.sem2 {
    package inf101.v19.sem2.ship {
      class Submarine {
      }
    }
  }
  

  package inf101.v19.sem2 {
    package inf101.v19.sem2.ui {
      class UI {
      }
    }
  }
  

  package inf101.v19.sem2 {
    package inf101.v19.sem2.ui {
      class UIOptions {
      }
    }
  }
  

  Battleship -up-|> IShip
  Battleship o-- Game : game
  Carrier -up-|> IShip
  Carrier o-- Game : game
  Computer -up-|> IPc
  Computer o-- Game : game
  Computer o-- IActor : player
  Cruiser -up-|> IShip
  Cruiser o-- Game : game
  Destroyer -up-|> IShip
  Destroyer o-- Game : game
  Game -up-|> IUIGame
  Game o-- IUserInterface : ui
  Game o-- IPlayer : player
  Game o-- IPc : pc
  Game o-- Carrier : carrier
  Game o-- Battleship : battleship
  Game o-- Cruiser : cruiser
  Game o-- Submarine : submarine
  Game o-- Destroyer : destroyer
  Game o-- Carrier : pc_carrier
  Game o-- Battleship : pc_battleship
  Game o-- Cruiser : pc_cruiser
  Game o-- Submarine : pc_submarine
  Game o-- Destroyer : pc_destroyer
  Main -up-|> Application
  Player -up-|> IPlayer
  Player o-- Game : game
  Player o-- IPc : pc
  Submarine -up-|> IShip
  Submarine o-- Game : game
  UI -up-|> IUserInterface
  UI o-- IUIGame : game


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
